style: xs,md: fix site logo hidden by menu

--- a/css/style.scss
+++ b/css/style.scss
@@ -264,7 +264,7 @@ ul {
 	.gravatar {
 		width: 100%;
 		margin-top: -80px;
-		text-align: left;
+		text-align: center;
 	}
 
 	.row .author-panel {
@@ -272,7 +272,16 @@ ul {
 	}
 
 	.gravatar.author {
-		text-align: right;
+		text-align: center;
+	}
+
+	@media (min-width: $screen-lg-min) {
+		.gravatar {
+			text-align: left;
+		}
+		.gravatar.author {
+			text-align: right;
+		}
 	}
 
 	.author-text {
